[project]
name = "rag-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autorag==0.3.16",
    "flagembedding>=1.3.5",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-anthropic>=0.6.19",
    "optimum[nncf,openvino]>=1.26.1",
    "pip-system-certs>=5.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.10.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
]
