[project]
name = "dataset-creation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "langchain-mcp-adapters<=0.1.7",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.10.1",
]
